bouton voir plus avis et derrogation

--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -80,6 +80,7 @@
                 'dossier/results/avisderogation/liste-dossier.phtml',
                 [
                     'listeDossierParType' => $this->listDossierEtab,
+                    'listeDossierParTypeN' => $this->listDossierEtabN,
                     'ID_DOSSIER_LIE' => $this->avisDerogations['ID_DOSSIER_LIE']
                 ]
             );
