--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -76,7 +76,8 @@
             $this->partial(
                 'dossier/results/avisderogation/liste-dossier.phtml',
                 [
-                    'listeDossierParType' => $this->listDossierEtab
+                    'listeDossierParType' => $this->listDossierEtab,
+                    'listeDossierParTypeN' => $this->listDossierEtabN
                 ]
             );
         ?>
