--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -45,6 +45,10 @@
                     <option value='true' <?php if(isset($_GET["presences_local_sommeil"]) && in_array('true', (array) $_GET["presences_local_sommeil"])) echo 'selected' ?>>Avec</option>
                     <option value='false' <?php if(isset($_GET["presences_local_sommeil"]) && in_array('false', (array) $_GET["presences_local_sommeil"])) echo 'selected' ?>>Sans</option>
                 </select>
+                <select name='periodicite[]' multiple onchange="masquerBoutonExportCalc()">
+                    <option value='true' <?php if(isset($_GET["periodicite"]) && in_array('true', (array) $_GET["periodicite"])) echo 'selected' ?>>Standard</option>
+                    <option value='false' <?php if(isset($_GET["periodicite"]) && in_array('false', (array) $_GET["periodicite"])) echo 'selected' ?>>Non Standard</option>
+                </select>
                 <select name='avis[]' multiple onchange="masquerBoutonExportCalc()">
                     <option value='true' <?php if(isset($_GET["avis"]) && in_array('true', (array) $_GET["avis"])) echo 'selected' ?>>Favorable</option>
                     <option value='false' <?php if(isset($_GET["avis"]) && in_array('false', (array) $_GET["avis"])) echo 'selected' ?>>Défavorable</option>
@@ -206,6 +210,7 @@
 		$("select[name='types_activites[]']").multiselect({header: false, noneSelectedText: "Tous les types d'activités"});
 		$("select[name='avis[]']").multiselect({header: false, noneSelectedText: "Tous les avis"});
         $("select[name='presences_local_sommeil[]']").multiselect({header: false, noneSelectedText: "Qu'importe la présence de local à sommeil", minWidth: 300});
+        $("select[name='periodicite[]']").multiselect({header: false, noneSelectedText: "Qu'importe la periodicite", minWidth: 300});
         $("select[name='commissions[]']").multiselect({header: false, noneSelectedText: "Toutes les commissions"});
         $("select[name='groupements_territoriaux[]']").multiselect({header: false, noneSelectedText: "Tous les groupements territoriaux", minWidth: 300});
 
