separation en deux actions

--- a/application/views/scripts/liste-des-evolutions/index.phtml
+++ b/application/views/scripts/liste-des-evolutions/index.phtml
@@ -1,6 +1,6 @@
 <!-- Titre -->
 <h3 class='page-header'>Liste des évolutions</h3>
-<form method='get'>
+<form action="/liste-des-evolutions/edit" method='post'>
 <ul>
 <?php
         foreach($this->datas as $key=>$data){
