On fixe la précision à 6 décimales en front

--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -556,12 +556,12 @@
 
             <dt>Longitude</dt>
             <dd>
-                 <input id="addressLongitude" type='text' name='lon' />
+                <input id="addressLongitude" type='text' name='lon' maxlength="11" />
             </dd>
 
             <dt>Latitude</dt>
             <dd>
-                 <input id="addressLatitude" type='text' name='lat' />
+                <input id="addressLatitude" type='text' name='lat' maxlength="10" />
             </dd>
         </dl>
         <?php if ($this->key_ign != null): ?>
