--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -1,23 +1,25 @@
-<?php foreach ($this->listeDossierParType as $type => $dossiers) :?>
+<?php foreach ($this->listeDossierParType as $type => $dossiers): ?>
     <div class="controls">
         <p>
             <?= $type ?>
-            <?php if(empty($dossiers)): ?>
+            <?php if ([] === $dossiers): ?>
                 : <strong>Aucun dossier de ce type disponible</strong>
             <?php endif ?>
         </p>
-            <div>
-                <?=
-                    $this->partial(
-                        'dossier/results/avisderogation/dossier.phtml',
-                        [
-                            'DOSSIERS_ETAB' => $dossiers,
-                            'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE ?? null
-                        ]
-                    );
-                ?>
-            </div>
-            <?php if(count($this->listeDossierParTypeN[$type])>0): ?>
+
+        <div>
+            <?=
+                $this->partial(
+                    'dossier/results/avisderogation/dossier.phtml',
+                    [
+                        'DOSSIERS_ETAB' => $dossiers,
+                        'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE ?? null
+                    ]
+                );
+            ?>
+        </div>
+
+        <?php if (count($this->listeDossierParTypeN[$type]) > 0): ?>
             <div id="<?= 'dossTypeN'.$type ?>" class='hide'>
                 <?=
                     $this->partial(
@@ -30,10 +32,8 @@
                 ?>
             </div>
             <button class='btn deploy' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
-            Voir plus
+                Voir plus
             </button>
-              <?php endif ?>
+        <?php endif ?>
     </div>
 <?php endforeach ?>
-
-
