--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -31,7 +31,7 @@
                     );
                 ?>
             </div>
-            <button class='btn deploy' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
+            <button class='btn buttonOpenClose' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
                 Voir plus
             </button>
         <?php endif ?>
