--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1268,3 +1268,7 @@ dl.champ_effectif_camping dd input {
 .radio-controls {
     margin-left: 3rem;
 }
+
+.control-label.no-top-padding {
+    padding-top: 0;
+}
