ajout des chmaps de fusion pour les contacts

--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -508,6 +508,69 @@ addChamp($odf, 'telPortMaitreOeuvre',$this->maiteOeuvre['TELPORTABLE_UTILISATEUR
 addChamp($odf, 'numFaxMaitreOeuvre',$this->maiteOeuvre['TELFAX_UTILISATEURINFORMATIONS']);
 addChamp($odf, 'societeMaitreOeuvre',$this->maiteOeuvre['SOCIETE_UTILISATEURINFORMATIONS']);
 
+//Informations du prefet
+addChamp($odf, 'nomPrefet',$this->prefetInfos['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomPrefet',$this->prefetInfos['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailPrefet',$this->prefetInfos['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixePrefet',$this->prefetInfos['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortPrefet',$this->prefetInfos['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxPrefet',$this->prefetInfos['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societePrefet',$this->prefetInfos['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur le maitre d'ouvrage
+addChamp($odf, 'nomMaitreOuvrage',$this->maitreOuvrage['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomMaitreOuvrage',$this->maitreOuvrage['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailMaitreOuvrage',$this->maitreOuvrage['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixeMaitreOuvrage',$this->maitreOuvrage['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortMaitreOuvrage',$this->maitreOuvrage['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxMaitreOuvrage',$this->maitreOuvrage['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societeMaitreOuvrage',$this->maitreOuvrage['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur le maitre d'oeuvre
+addChamp($odf, 'nomMaitreOeuvre',$this->maitreOeuvre['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomMaitreOeuvre',$this->maitreOeuvre['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailMaitreOeuvre',$this->maitreOeuvre['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixeMaitreOeuvre',$this->maitreOeuvre['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortMaitreOeuvre',$this->maitreOeuvre['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxMaitreOeuvre',$this->maitreOeuvre['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societeMaitreOeuvre',$this->maitreOeuvre['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur le Pétitionnaire demandeur
+addChamp($odf, 'nomPetitionaireDemandeur',$this->petitionaireDemandeur['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomPetitionaireDemandeur',$this->petitionaireDemandeur['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailPetitionaireDemandeur',$this->petitionaireDemandeur['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixePetitionaireDemandeur',$this->petitionaireDemandeur['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortPetitionaireDemandeur',$this->petitionaireDemandeur['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxPetitionaireDemandeur',$this->petitionaireDemandeur['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societePetitionaireDemandeur',$this->petitionaireDemandeur['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur le Controller Technique
+addChamp($odf, 'nomControllerTechnique',$this->controllerTechnique['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomControllerTechnique',$this->controllerTechnique['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailControllerTechnique',$this->controllerTechnique['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixeControllerTechnique',$this->controllerTechnique['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortControllerTechnique',$this->controllerTechnique['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxControllerTechnique',$this->controllerTechnique['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societeControllerTechnique',$this->controllerTechnique['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur participant
+addChamp($odf, 'nomParticipant',$this->participant['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomParticipant',$this->participant['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailParticipant',$this->participant['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixeParticipant',$this->participant['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortParticipant',$this->participant['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxParticipant',$this->participant['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societeParticipant',$this->participant['SOCIETE_UTILISATEURINFORMATIONS']);
+
+//Informations sur demandeur
+addChamp($odf, 'nomDemandeur',$this->demandeur['NOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'prenomDemandeurt',$this->demandeur['PRENOM_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'mailDemandeur',$this->demandeur['MAIL_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telFixeDemandeur',$this->demandeur['TELFIXE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'telPortDemandeur',$this->demandeur['TELPORTABLE_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'numFaxDemandeur',$this->demandeur['TELFAX_UTILISATEURINFORMATIONS']);
+addChamp($odf, 'societeDemandeur',$this->demandeur['SOCIETE_UTILISATEURINFORMATIONS']);
+
 // Descriptif standard de l'établissement
 addChamp($odf, 'historiqueDescriptifEtab',$this->etabDesc['DESCRIPTIF_HISTORIQUE_ETABLISSEMENT']);
 addChamp($odf, 'descriptifEtab',$this->etabDesc['DESCRIPTIF_ETABLISSEMENT']);
