Initialisation de la variable

--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -127,6 +127,7 @@ try{
 
 }
 
+$listeMailPreventionniste = [];
 foreach ($this->preventionnistes as $prev) {
     $listeMailPreventionniste[] = $prev['MAIL_UTILISATEURINFORMATIONS'];
 }
