[#4798] Ajout du mail des préventionnistes dans le rapport (#87)
* ajout generation mail preventionniste avec boucle preventionnistesMail

* Simplification du code

* Harmonisation avec les autres fichiers

* Ajout du champ aux autres documents

* Initialisation de la variable

---------

Co-authored-by: Valentin Rouxel <valentin.rouxel@atos.net>

--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -127,6 +127,12 @@ try{
 
 }
 
+$listeMailPreventionniste = [];
+foreach ($this->preventionnistes as $prev) {
+    $listeMailPreventionniste[] = $prev['MAIL_UTILISATEURINFORMATIONS'];
+}
+addChamp($odf, 'listeMailPreventioniste', implode(', ', $listeMailPreventionniste));
+
 // PARTIE DOC CONSULTE
 //Generation du segment listeDocs
 try{
