--- a/application/views/scripts/commission/documents.phtml
+++ b/application/views/scripts/commission/documents.phtml
@@ -5,7 +5,7 @@
 			<th>Compte Rendu type de la commission</th>
 		</tr>
 	</thead>
-	
+
 	<tbody>
 		<tr>
 			<td style='text-align: center;' >
@@ -22,7 +22,7 @@
 						<strong>Aucun document défini.</strong>
 					<?php endif ?>
 				</p>
-				<p>	
+				<p>
 					<form class='courrier' action='/commission/add-document' enctype='multipart/form-data' method='post' target='iframe' >
 						<input id='add-file' type='file' name='COURRIER' />
 						<input type='hidden' name='id_commission' value='<?php echo $_GET["id_commission"] ?>' />
@@ -33,39 +33,39 @@
 	</tbody>
 </table>
 
-<iframe id='iframe' name="iframe" marginheight="0" marginwidth="0" height="0" width="0"></iframe>
+<iframe id='iframe' name="iframe" marginheight="0" marginwidth="0" height="0" width="0" hidden></iframe>
 
 <script type="text/javascript">
 
 	// Callback
 	function callback(error) {
-	
+
 		if(error != 'null') {
-			
+
 			alert(error);
 		}
 		else {
-			
+
 			// On recharge l'onglet
 			var current_index = $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs("option","active");
                 $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs('load',current_index);
 		}
 	}
-	
+
 	// Gestion de l'envoi auto du formulaire
 	$("form.courrier input[type=file]").change(function() {
 		$(this).parent().submit();
 	});
-	
+
 	// Gestion de la suppression d'un courrier
 	$("a.delete-courrier").click(function() {
-	
+
 		var a = this;
-		
+
 		$.ajax({
 			url: a.href,
 			success: function(result) {
-			
+
 				var current_index = $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs("option","active");
                 $("#<?php echo $_GET["id_commission"] ?>_tabs").tabs('load',current_index);
 			}
@@ -73,5 +73,5 @@
 
 		return false;
 	});
-	
+
 </script>
