--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1335,7 +1335,7 @@ $(".delaipresc").live('click', function() {
                 </li>
                 <li class="row-fluid" style="margin-bottom: 20px;">
                     <?php
-                        $classPec = '';
+                        $classPec = 'muted';
                     if ($this->enumStatutsPec::EN_ATTENTE === $this->statutPec):
                         $classPec = 'text-info';
                     elseif ($this->enumStatutsPec::PRISE_EN_COMPTE === $this->statutPec):
@@ -1367,7 +1367,7 @@ $(".delaipresc").live('click', function() {
                 </li>
                 <li class="row-fluid" style="margin-bottom: 20px;">
                     <?php
-                        $classAvis = '';
+                        $classAvis = 'muted';
                     if ($this->enumStatutsAvis::EN_COURS === $this->statutAvis):
                         $classAvis = 'text-info';
                     elseif ($this->enumStatutsAvis::TRAITE === $this->statutAvis):
